--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <a href="https://t.me/ygstudio97" target="_blank">Join</a>
     </div>
     <div class="link-card">
-      <img src="https://telegram.org/img/t_logo.png" alt="Telegram">
+      <img src="https://images.seeklogo.com/logo-png/27/1/gravatar-logo-png_seeklogo-273210.png" alt="gravatar">
       <h3>Telegram</h3>
       <p>Just Visit this site</p>
       <a href="https://gravatar.com/luminarydeliciousf6ecd3b76d" target="_blank">Visit</a>
