--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <a href="https://github.com/YGstudio97" target="_blank">Visit</a>
     </div>
     <div class="link-card">
-      <img src="https://cdn.icon-icons.com/icons2/2699/PNG/512/discord_logo_icon_170948.png" alt="Discord">
+      <img src="https://www.bing.com/images/search?q=discord+logo&id=82C7CA5E4B6B205334D749DD5404F03B2831443B&FORM=IACFIR" alt="Discord">
       <h3>Discord</h3>
       <p>Join my community server and chat with devs.</p>
       <a href="https://discord.gg/hHefj3UnZ7" target="_blank">Join</a>
