--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
     <div class="link-card">
       <img src="https://images.seeklogo.com/logo-png/27/1/gravatar-logo-png_seeklogo-273210.png" alt="gravatar">
-      <h3>Gravater/h3>
+      <h3>Gravater</h3>
       <p>Just Visit this site</p>
       <a href="https://gravatar.com/luminarydeliciousf6ecd3b76d" target="_blank">Visit</a>
     </div>
