--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <a href="https://ygstudio97.itch.io/" target="_blank">Play</a>
     </div>
     <div class="link-card">
-      <img src="https://cdn.modrinth.com/data/logo.png" alt="Modrinth">
+      <img src="https://www.bing.com/images/search?q=modrinth+logo&id=CB3E597184EEAE101E9E5E3FDC548E1E64A6CA8A&FORM=IACFIR" alt="Modrinth">
       <h3>Modrinth</h3>
       <p>Minecraft mods and creative content.</p>
       <a href="https://modrinth.com/user/YGstudio97" target="_blank">Mods</a>
